objects/Recipients_List_Account_Notifications__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a list of email addresses that form the recipients list of any notification related to partner accounts.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>toAusCreditLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail to AUS Credit Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>toAusCreditTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail on Credit Task Creation AUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>toAusOracleTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail on Oracle Task Creation AUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>toAusWelcomeKit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail to AUS Welcome Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>toOracleTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail on Oracle Task Creation</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipients List (Account Notifications)</label>
</CustomObject>